--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello, GitHub Actions!
+<!-- index.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GitHub Actions Demo</title>
+</head>
+<body>
+  <h1>Hello, GitHub Actions!</h1>
+</body>
+</html>
