--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GitHub Actions Demo!!!!!!</title>
+  <title>GitHub Actions Demo</title>
 </head>
 <body>
-  <h1>Hello, GitHub Actions!</h1>
+  <h1>Hello, GitHub Actions!psdogkjvposkjgds</h1>
 </body>
 </html>
