--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>GitHub Actions Demo</title>
 </head>
 <body>
-  <h1>Hello, GitHub Actions!dfdsdfsdffs</h1>
+  <h1>Hello, GitHub Actions</h1>
 </body>
 </html>
