--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GitHub Actions Diljlijiemo</title>
+  <title>GitHub Actions yarbi ikhdm </title>
 </head>
 <body>
   <h1>Hello, GitHub Actions</h1>
