--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>GitHub Actions yarbi ikhdm </title>
 </head>
 <body>
-  <h1>Hello, GitHub Actikkjkjlsdksdonr</h1>
+  <h1>Hello, GitHub Actikkjkjjkkjjlsdksdonr</h1>
 </body>
 </html>
