--- a/index.html
+++ b/index.html
@@ -8,5 +8,26 @@
 </head>
 <body>
   <h1>Hello, GitHub Actikkjkjlksfdlkjkkjjdsfkmsdmfsskjkdslsdksdonr</h1>
+  <p>What I Learned from This Project
+1. Understanding of CI/CD Concepts:
+I learned the fundamentals of Continuous Integration and Continuous Deployment (CI/CD) by setting up a GitHub Actions workflow that automatically deploys my site whenever a specific file (index.html) changes.
+
+2. GitHub Actions Workflows:
+I learned how to write a GitHub Actions workflow in YAML to automate tasks. Specifically, I wrote a workflow (deploy.yml) that:
+
+Listens for changes pushed to the main branch.
+
+Only triggers if index.html is modified.
+
+Deploys the changes to GitHub Pages.
+
+3. GitHub Pages Deployment:
+I understood how to host static websites using GitHub Pages, and how to automate deployments through GitHub Actions without manual steps.
+
+4. Real-world Automation Setup:
+This project gave me experience with real-world deployment automation – something that's critical in modern software development.
+
+5. (Optional Stretch Goal)
+If I wanted to expand this project, I could integrate a static site generator like Hugo, Jekyll, or Astro to build a more complete website (e.g. a portfolio), and automate that build and deployment process </p>
 </body>
 </html>
