--- a/index.html
+++ b/index.html
@@ -29,5 +29,8 @@ This project gave me experience with real-world deployment automation – someth
 
 5. (Optional Stretch Goal)
 If I wanted to expand this project, I could integrate a static site generator like Hugo, Jekyll, or Astro to build a more complete website (e.g. a portfolio), and automate that build and deployment process </p>
+  <p>“I learned how to use GitHub Actions to automate the deployment of a static website to GitHub Pages, triggered only when specific files change. It taught me the basics of CI/CD and helped me get hands-on experience with real-world deployment workflows.”
+
+</p>
 </body>
 </html>
